<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.iav.bowling.view.game.BowlingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.game.BowlingGameActivity">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/frame_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/adapter_item_frame" />

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/score_buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontal_margin_score_button_layout"
            android:layout_marginVertical="@dimen/_20dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:flexDirection="row"
            app:flexWrap="wrap"
            app:layout_constraintBottom_toTopOf="@id/button_restart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/button_0"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:onClick="onClickValue"
                android:padding="@dimen/score_button_padding"
                android:tag="0"
                android:text="@string/_0" />

            <Button
                android:id="@+id/button_1"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:onClick="onClickValue"
                android:padding="@dimen/score_button_padding"
                android:tag="1"
                android:text="@string/_1"
                android:textSize="@dimen/score_button_text_size" />

            <Button
                android:id="@+id/button_2"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:onClick="onClickValue"
                android:padding="@dimen/score_button_padding"
                android:tag="2"
                android:text="@string/_2"
                android:textSize="@dimen/score_button_text_size" />

            <Button
                android:id="@+id/button_3"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:onClick="onClickValue"
                android:padding="@dimen/score_button_padding"
                android:tag="3"
                android:text="@string/_3"
                android:textSize="@dimen/score_button_text_size" />

            <Button
                android:id="@+id/button_4"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:onClick="onClickValue"
                android:padding="@dimen/score_button_padding"
                android:tag="4"
                android:text="@string/_4"
                android:textSize="@dimen/score_button_text_size" />

            <Button
                android:id="@+id/button_5"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:onClick="onClickValue"
                android:padding="@dimen/score_button_padding"
                android:tag="5"
                android:text="@string/_5"
                android:textSize="@dimen/score_button_text_size" />

            <Button
                android:id="@+id/button_6"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:onClick="onClickValue"
                android:padding="@dimen/score_button_padding"
                android:tag="6"
                android:text="@string/_6" />

            <Button
                android:id="@+id/button_7"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:onClick="onClickValue"
                android:padding="@dimen/score_button_padding"
                android:tag="7"
                android:text="@string/_7"
                android:textSize="@dimen/score_button_text_size" />

            <Button
                android:id="@+id/button_8"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:onClick="onClickValue"
                android:padding="@dimen/score_button_padding"
                android:tag="8"
                android:text="@string/_8"
                android:textSize="@dimen/score_button_text_size" />

            <Button
                android:id="@+id/button_9"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:onClick="onClickValue"
                android:padding="@dimen/score_button_padding"
                android:tag="9"
                android:text="@string/_9"
                android:textSize="@dimen/score_button_text_size" />

            <Button
                android:id="@+id/button_10"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:onClick="onClickValue"
                android:padding="@dimen/score_button_padding"
                android:tag="10"
                android:text="@string/_10"
                android:textSize="@dimen/score_button_text_size" />
        </com.google.android.flexbox.FlexboxLayout>


        <Button
            android:id="@+id/button_restart"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:onClick="onClickRestart"
            android:text="@string/restart"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_game_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:text="@{@string/score(viewModel.score)}"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Score: 5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>